--- a/demo2/templates/player.html
+++ b/demo2/templates/player.html
@@ -151,7 +151,7 @@
     </div>
     <div class="buttons">
       <div class="prev-track" onclick="prevTrack()"><i class="fa fa-step-backward fa-2x"></i></div>
-      <div class="playpause-track" onclick="playpauseTrack()"><i class="fa fa-pause-circle fa-5x"></i></div>
+      <div class="playpause-track" onclick="playpauseTrack()"><i class="fa fa-play-circle fa-5x"></i></div>
       <div class="next-track" onclick="nextTrack()"><i class="fa fa-step-forward fa-2x"></i></div>
     </div>
     <div class="slider_container">
@@ -269,9 +269,10 @@
     let total_duration = document.querySelector(".total-duration");
 
     let track_index = 0;
-    let isPlaying = true;
+    let isPlaying = false;
     let updateTimer;
-
+    let duration;
+    let currentTime;
     // Create new audio element
     // let curr_track = document.createElement('audio');
 
@@ -374,7 +375,7 @@
     function seekUpdate() {
       let seekPosition = 0;
       player.getCurrentState().then(response => {
-        let currentTime=Math.floor(response.position/1000)
+        currentTime=Math.floor(response.position/1000)
         duration=Math.floor(response.duration/1000)
       });
 
@@ -405,4 +406,4 @@
   </script>
 </body>
 
-</html>					
+</html>     
