--- a/frontend/subpage/templates/index.html
+++ b/frontend/subpage/templates/index.html
@@ -9,9 +9,14 @@
         <!-- with jQuery and popper.js -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-        <!-- src 
-        <script src="js/main.js"></script>
-        -->
+        <!-- Player: Load FontAwesome icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+        <!-- Player: Main script for the player -->
+        <script src="https://sdk.scdn.co/spotify-player.js"></script>
+        <!-- js script -->
+        <script src="file:///home/absnormal/podcast_recommendation/frontend/subpage/player.js"></script>
+        <!-- css -->
+        <script src="file:///home/absnormal/podcast_recommendation/frontend/subpage/player.css"></script>
     </head>
     <body>
         <!-- fixed top navbar -->
@@ -167,9 +172,31 @@
                 </div>
                 <!-- right fixed side playaudio -->
                 <div class="col-2 sticky-top">
-                  
+                    <div class="player">
+                        <div class="details">
+                            <!-- <div class="now-playing">PLAYING x OF y</div> -->
+                            <div class="track-art"></div>
+                            <div class="track-name">Track Name</div>
+                            <div class="track-artist">Track Artist</div>
+                        </div>
+                        <div class="row buttons">
+                            <div class="col prev-track" onclick="prevTrack()"><i class="fa fa-step-backward fa-2x"></i></div>
+                            <div class="col playpause-track" onclick="playpauseTrack()"><i class="fa fa-play-circle fa-5x"></i></div>
+                            <div class="col next-track" onclick="nextTrack()"><i class="fa fa-step-forward fa-2x"></i></div>
+                        </div>
+                        <div class="slider_container">
+                            <div class="current-time">00:00</div>
+                            <input type="range" min="1" max="100" value="0" class="seek_slider" onchange="seekTo()">
+                            <div class="total-duration">00:00</div>
+                        </div>
+                        <div class="slider_container">
+                            <i class="fa fa-volume-down"></i>
+                            <input type="range" min="1" max="100" value="99" class="volume_slider" onchange="setVolume()">
+                            <i class="fa fa-volume-up"></i>
+                        </div>
+                    </div>
                 </div>
-              </div>
+            </div>
         </div>
     </body>
 </html>
