--- a/frontend/mainpage/templates/reset.css
+++ b/frontend/mainpage/templates/reset.css
@@ -1,21 +1,65 @@
-.right{
-    width: 50%;
+.hits{
+    width: 700px;
     height: 500px;
     float:left;
 }
 .left{
-    background: rgb(241, 241, 241);
+    background: #F4F4F4;
     border-radius: 0.5rem;
-    width: 55%;
+    width: 30%;
     height: 600px;
     float:left;
 }
+
 .row{
-    background-color: red;
-    width: 35%;
-    border-radius: 0.5rem;
+    width: 300px;
+    height: 400px;
     margin-bottom: 1rem;
     margin-top: 1rem;
+
+    float:left;
+    position: relative;
+    perspective: 1000px;
+}
+img{
+    height:150px; 
+    width:150px;
+    border-radius: 0.5rem;
+    z-index: 5;
+    margin-right: 1rem;
+}
+.front,.back{
+    background-color: #FCF8F3;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    position: absolute;
+    border-radius: 0.5rem;
+
+    padding-top:18px;
+    padding-bottom:18px;
+    padding-left: 5px;
+
+    backface-visibility: hidden; /*html 元素背後不可看見*/
+    transition: .8s;
+}
+.front{
+    transform: rotateY(0deg);
+    background-color: red;
+    
+}
+.back{  
+    background-color: blue;
+    transform: rotateY(-180deg);
+   
+}
+.row:hover .front{
+    transform: rotateY(180deg);
+    transition: transform 1s cubic-bezier(0,.5,.54,.99);
+} 
+.row:hover .back{
+    transform: rotateY(0deg);
+    transition: transform 1s cubic-bezier(0,.5,.54,.99);
 }
 .ais-Highlight-highlighted {
     font-size:20px;
