--- a/frontend/mainpage/templates/testcardcss3.css
+++ b/frontend/mainpage/templates/testcardcss3.css
@@ -21,16 +21,16 @@
     overflow: hidden;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.50);
     border-radius: 5px;
-    backface-visibility: hidden; 
+    /* backface-visibility: hidden;  */
 
   }
   #cards_landscape_wrap-2 .card-flyer .image-box:hover{
     /* backface-visibility: hidden; */
-    background: #000000;
+    /* background: #000000; */
     overflow: hidden;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.50);
     border-radius: 5px;
-    backface-visibility: hidden; 
+    /* backface-visibility: hidden;  */
 
   }
   #cards_landscape_wrap-2 .card-flyer .image-box img{
@@ -46,7 +46,7 @@
   }
   #cards_landscape_wrap-2 .card-flyer .image-box:hover img{
     /* backface-visibility: hidden;  */
-    background: #000000;
+    /* background: #000000; */
     -webkit-transition:all .9s ease; 
     -moz-transition:all .9s ease; 
     -o-transition:all .9s ease;
@@ -67,14 +67,16 @@
     transform:scale(1.15);
     /* background-color:#000000; */
   }
+  /* front */
   #cards_landscape_wrap-2 .card-flyer .text-box{
     text-align: center;  
+    transform: rotateY(0deg);
     backface-visibility: hidden; 
 
   }
   #cards_landscape_wrap-2 .card-flyer .text-box:hover{
     text-align: center; 
-    backface-visibility: hidden; 
+    /* backface-visibility: hidden;  */
     /* background-color: beige;  */
   }
   #cards_landscape_wrap-2 .card-flyer .text-box .text-container{
@@ -94,14 +96,14 @@
 
   }
   #cards_landscape_wrap-2 .card-flyer:hover{
-    /* background: #fff;
+    background: #fff;
     box-shadow: 0px 15px 26px rgba(0, 0, 0, 0.50);
     -webkit-transition: all 0.2s ease-in;
     -moz-transition: all 0.2s ease-in;
     -ms-transition: all 0.2s ease-in;
     -o-transition: all 0.2s ease-in;
     transition: all 0.2s ease-in;
-    margin-top: 50px; */
+    margin-top: 50px;
     /* 覆蓋卡 */
     /* font-size: 14px; */
     /* text-shadow: 0 1px 0 rgba(51,51,51,0.3);
@@ -118,17 +120,27 @@
     /* transition: 0.2s; */
     /* opacity: 1;
     transform: none; */
-    transform: rotateY(180deg);
-    transition: transform 1s cubic-bezier(0,.5,.54,.99);
-    /* backface-visibility: hidden;  */
-    /* background-color: blue; */
 
+    /* transform: rotateY(180deg);
+    transition: transform 1s cubic-bezier(0,.5,.54,.99); */
+
+    
+    /* background-color: blue; */
+    /* backface-visibility: hidden;  */
 
   }
+  /* 旋轉研究 */
+  #cards_landscape_wrap-2 .card-flyer:hover .text-box{
+    transform: rotateY(180deg);
+    transition: transform 1s cubic-bezier(0,.5,.54,.99);
+
+  }
+
   #cards_landscape_wrap-2 .card-flyer.text-box-back{
-    background-color: blue;
+    /* background-color: blue; */
     /* opacity: 0; */
     transform: rotateY(-180deg);
+    /* transform: rotateY(-180deg); */
     margin-top: 10px;
     -webkit-transition: all 0.2s ease-in;
     -moz-transition: all 0.2s ease-in;
@@ -139,7 +151,14 @@
     backface-visibility: hidden; 
 
   }
-  #cards_landscape_wrap-2 .card-flyer.text-box-back:hover{
+   /* 旋轉研究 */
+   #cards_landscape_wrap-2 .card-flyer:hover .text-box-back{
+    transform: rotateY(0deg);
+    transition: transform 1s cubic-bezier(0,.5,.54,.99);
+
+  }
+  
+  /* #cards_landscape_wrap-2 .card-flyer.text-box-back:hover{ */
     /* background: #fff;
     box-shadow: 0px 15px 26px rgba(0, 0, 0, 0.50);
     -webkit-transition: all 0.2s ease-in;
@@ -164,21 +183,24 @@
     /* transition: 0.2s; */
     /* opacity: 1;
     transform: none; */
-    transform: rotateY(0deg);
-    transition: transform 1s cubic-bezier(0,.5,.54,.99);
+    /* transform: rotateY(0deg); */
+    /* transition: transform 1s cubic-bezier(0,.5,.54,.99); */
     /* backface-visibility: hidden;  */
 
 
-  }
+  /* } */
 
   
   #cards_landscape_wrap-2 .card-flyer .text-box-back p{
+    /* background-color: #000000; */
+
     margin-top: 10px;
     margin-bottom: 0px;
     padding-bottom: 0px; 
     font-size: 14px;
     letter-spacing: 1px;
     color: #000000;
+    
   }
   #cards_landscape_wrap-2 .card-flyer .text-box h6{
     margin-top: 0px;
