[fix] fixed searchbox & flip card items

--- a/frontend/mainpage/templates/index - 複製 (2)_V2 - 複製.html
+++ b/frontend/mainpage/templates/index - 複製 (2)_V2 - 複製.html
@@ -26,10 +26,10 @@
     <!-- Bootstrap&Local Card -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="C:\Users\Jenny\podcast_recommendation\frontend\mainpage\templates\testcardcss2.css" />
+    <link rel="stylesheet" href="file:///home/absnormal/download/podcast_recommendation/frontend/mainpage/templates/testcardcss2.css" />
 
     <!-- turn description card -->
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans&display=swap" rel="stylesheet"><link rel="stylesheet" href="C:\Users\Jenny\podcast_recommendation\frontend\mainpage\templates\style2.css">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans&display=swap" rel="stylesheet"><link rel="stylesheet" href="file:///home/absnormal/download/podcast_recommendation/frontend/mainpage/templates/style2.css">
 </head>
 
 <body>
