--- a/frontend/mainpage/templates/index - 複製 (2).html
+++ b/frontend/mainpage/templates/index - 複製 (2).html
@@ -26,7 +26,7 @@
       <!-- Bootstrap&Local Card -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="C:\Users\Jenny\podcast_recommendation\frontend\mainpage\templates\testcardcss.css" />
+    <link rel="stylesheet" href="file:///home/absnormal/download/podcast_recommendation/frontend/mainpage/templates/testcardcss.css" />
 </head>
 
 <body>
