--- a/frontend/mainpage/templates/index.html
+++ b/frontend/mainpage/templates/index.html
@@ -11,20 +11,26 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
+    <!-- local css -->
+    <link rel="stylesheet" href="./flip.css" />
   </head>
   <body>
     <div class="row">
-      <div class="col-7" style="display: table; height: 1000px">
-        <div style="vertical-align: middle; display: table-cell;" id="searchbox"></div>
+      <div class="col-7"></div>
+      <!-- searchBar is position: fixed -->
+      <div class="col-7 searchBar">
+        <div class="searchBox" id="searchbox"></div>
       </div>
-      <div class="col-5" style="overflow: auto;">
-        <div id="hits"></div>
-      </div>
+      <div class="col-5" id="hits"></div>
     </div>
   </body>
+
   <style>
     body { font-family: sans-serif; padding: 1em; }
     .ais-SearchBox { margin: 1em 0; }
+    li {
+      list-style-type: none;
+    }
   </style>
   <script>
     const search = instantsearch({
@@ -57,30 +63,33 @@
           empty: 'No results for <q>{{ query }}</q>',
           showMoreText: `
           <div>
-              <h4>show more results</h4>
+            <h4>show more results</h4>
           </div>`,
-          item: `
-          <div class="row">
-            <div class="col-5" style="height:260px;">
-              <img src="{{poster}}" style="height:250px; width:250px;"/>
-            </div>
-            <div class="col-7">
-              <h3 class="hit-episode" style="overflow-x:hidden; height:65px;">
-                {{#helpers.highlight}}{ "attribute": "episode_name" }{{/helpers.highlight}}
-              </h3>
-              <h4 class="hit-publisher" style="overflow-x:hidden; height:40px;">
-                {{#helpers.highlight}}{ "attribute": "publisher" }{{/helpers.highlight}}
-              </h4>
-              <audio controls>
-                  <source src="{{episode_audio}}" type="audio/x-m4a">
-                  <source src="{{episode_audio}}" type="audio/mp3">
-                    Your browser does not support the audio tag.
-              </audio>
-              <div class="hit-description" style="overflow-x:hidden; height:75px;">
-                {{#helpers.highlight}}{ "attribute": "episode_description" }{{/helpers.highlight}}
-              </div>
-            </div>
-          </div>`
+          item(hit){
+            return`
+              <div class="flipcard">
+                <div class="flipcard-inner">
+                  <div class="flipcard-front">
+                    <div class="image">
+                      <img src="${hit.poster}"/>
+                    </div>
+                    <div class="info">
+                      <p class="hit-episode">
+                        ${instantsearch.highlight({ attribute: 'episode_name', highlightedTagName: 'mark', hit })}
+                      </p>
+                      <p class="hit-publisher">
+                        ${instantsearch.highlight({ attribute: 'publisher', highlightedTagName: 'mark', hit })}
+                      </p>
+                    </div>
+                  </div>
+                  <div class="flipcard-back">
+                    <p class="hit-description">
+                      ${hit.episode_description}
+                    </p>
+                  </div>
+                </div>
+              </div>`;
+          }
         }
       })
     ]);
