--- a/frontend/mainpage/templates/index_copy.html
+++ b/frontend/mainpage/templates/index_copy.html
@@ -76,7 +76,7 @@
                   </div>
                 </div>
                 <div class="back">
-                    ${hit.episode_description}}
+                    ${hit.episode_description}
                 </div>             
               </div>`;
           }
