--- a/frontend/mainpage/templates/index_copy.html
+++ b/frontend/mainpage/templates/index_copy.html
@@ -12,13 +12,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
-    <main>
+    <main class="main">
         <div class="left">
-          <div style="vertical-align: middle; display: table-cell;" id="searchbox"></div>
+          <div id="searchbox"></div>
         </div>
-        <div class="hits" id="hits"></div>
+        <div class="hits" id="hits">
+          <div class="top"></div>
+        </div>
+        <div class="bottom"></div>
         <div style="clear:both;"></div>
     </main>
   </body>
@@ -49,34 +55,34 @@
         // showLoadingIndicator (default false)
       }),
       instantsearch.widgets.configure({ 
-        hitsPerPage: 5
+        hitsPerPage: 100
       }),
       instantsearch.widgets.infiniteHits({
         container: "#hits",
         templates: {
           empty: 'No results for <q>{{ query }}</q>',
           showMoreText: `
-          <div>
+          <div class="show_more">
               <h4>show more results</h4>
           </div>`,
           item(hit){
             return`
               <div class="row">
                 <div class="front">
-                  <div class="img">
-                    <img src="${hit.poster}"/>
-                  </div>
-                  <div class="info">
-                    <p class="hit-episode">
-                      ${instantsearch.highlight({ attribute: 'episode_name', highlightedTagName: 'mark', hit })}
-                    </p>
-                    <p class="hit-publisher">
-                      ${instantsearch.highlight({ attribute: 'publisher', highlightedTagName: 'mark', hit })}
-                    </p>
-                  </div>
+                    <div class="img">
+                      <img src="${hit.poster}"/>
+                    </div>
+                    <div class="info">
+                      <p class="hit-publisher">
+                        ${instantsearch.highlight({ attribute: 'publisher', highlightedTagName: 'mark', hit })}
+                      </p>
+                      <p class="hit-episode">
+                        ${instantsearch.highlight({ attribute: 'episode_name', highlightedTagName: 'mark', hit })}
+                      </p>
+                    </div>
                 </div>
                 <div class="back">
-                    ${hit.episode_description}
+                    ${hit.episode_description}}
                 </div>             
               </div>`;
           }
