--- a/frontend/mainpage/templates/reset.css
+++ b/frontend/mainpage/templates/reset.css
@@ -1,55 +1,126 @@
-.hits{
-    width: 700px;
-    height: 500px;
-    float:left;
+.main{
+    background: #ffffff;
+    position: absolute;
+    left:0%;
+    top:0%;
+    bottom: 0%;
+    right: 0%;
 }
 .left{
-    background: #F4F4F4;
-    border-radius: 0.5rem;
-    width: 30%;
-    height: 600px;
+    background: #111a24;
+    left:5%;
+    top:10%;
+    bottom: 10%;
+    right: 35%;
+    border-radius: 1.5rem;
+    -webkit-filter: drop-shadow(0px 0px 12px #BCBCBC);
+    filter: drop-shadow(0px 0px 12px #BCBCBC);
+    
+    width: 60%;
     float:left;
+    position:fixed;
 }
-
-.row{
+.hits{
+    float:left;
+    top:0%;
+    bottom:0%;
+    left: 70%;
+    right: 5%;
+    position:fixed;
+    overflow-x: scroll;
+}
+li { list-style-type: none; }
+.top{
     width: 300px;
-    height: 400px;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+    height: 440px;
+    margin-bottom: 2.5rem;
+    margin-top: 2.5rem;
 
     float:left;
     position: relative;
     perspective: 1000px;
 }
-img{
-    height:150px; 
-    width:150px;
-    border-radius: 0.5rem;
-    z-index: 5;
-    margin-right: 1rem;
+.row{
+    width: 300px;
+    height: 420px;
+    margin-bottom: 2.5rem;
+    margin-top: 2.5rem;
+    -webkit-filter: drop-shadow(0px 0px 12px #BCBCBC);
+    filter: drop-shadow(0px 0px 12px #BCBCBC);
+
+    float: left;
+    position: relative;
+    perspective: 1000px; 
 }
 .front,.back{
-    background-color: #FCF8F3;
     width: 100%;
     height: 100%;
     z-index: 1;
     position: absolute;
-    border-radius: 0.5rem;
-
-    padding-top:18px;
-    padding-bottom:18px;
-    padding-left: 5px;
+    border-radius: 1.2rem;
 
     backface-visibility: hidden; /*html 元素背後不可看見*/
     transition: .8s;
 }
 .front{
     transform: rotateY(0deg);
-    background-color: red;
-    
+    background-color: #161629;
+}
+img{
+    height:300px; 
+    width:300px;
+    border-radius: 1.2rem 1.2rem 0 0;
+    z-index: 5;
+
+    position: absolute;
+    left: 0%;
+}
+.info{
+    position: absolute;
+    top:320px;
+    bottom: 20px;
+    left: 5%;
+    right: 5%;
+}
+
+.hit-publisher{
+    font-family: 'Nunito Sans', sans-serif;
+    position: absolute;
+    top:0%;
+    left:0%;
+    font-size: 15px;
+    color:#DEDEDE;
+}
+.hit-episode{
+    font-family: 'Nunito Sans', sans-serif;
+    position: absolute;
+    top:35%;
+    left:0%;
+
+    font-size: 18px;
+    line-height: 24px;
+    color:white;
+
+    overflow:hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    white-space: normal;
+}
+.hit-publisher .ais-Highlight-highlighted {
+    font-size: 15px;
+    color:white;
+    background: linear-gradient(to bottom,transparent,transparent 50%,#B0120F 50%,#B0120F 85%,transparent 85%);
+}
+.hit-episode .ais-Highlight-highlighted {
+    font-size: 18px;
+    color:white;
+    background: linear-gradient(to bottom,transparent,transparent 50%,#B0120F 50%,#B0120F 80%,transparent 80%);
 }
 .back{  
-    background-color: blue;
+    background-color: #26262e;
     transform: rotateY(-180deg);
    
 }
@@ -61,6 +132,6 @@ img{
     transform: rotateY(0deg);
     transition: transform 1s cubic-bezier(0,.5,.54,.99);
 }
-.ais-Highlight-highlighted {
-    font-size:20px;
+.ais-InfiniteHits-loadMore{
+    display:none;
 }
