--- a/frontend/subpage2/static/demo3player.css
+++ b/frontend/subpage2/static/demo3player.css
@@ -11,7 +11,7 @@ html, body {
 
 .panel{
 /*    width: auto;*/
-    height: 530px;
+    height: 90vh;
     padding: 2rem;
     /*margin: 1rem;*/
     /*    overflow: hidden;
