--- a/frontend/subpage2/static/demo3player.css
+++ b/frontend/subpage2/static/demo3player.css
@@ -7,21 +7,54 @@ html, body {
 }
 .leftframe{
     padding: 1rem;
+
+    /* background: #21212e;
+    left:5%;
+    top:10%;
+    bottom: 10%;
+    right: 35%;
+    border-radius: 1.5rem;
+    -webkit-filter: drop-shadow(0px 0px 12px #c9c9c9);
+    filter: drop-shadow(0px 0px 12px #c9c9c9);
+    
+    width: 60%;
+    float:left;
+    position:fixed; */
 }
 
 .panel{
+
 /*    width: auto;*/
-    height: 90vh;
-    padding: 2rem;
+
+    /* height: 530px;
+    padding: 2rem; */
+
     /*margin: 1rem;*/
     /*    overflow: hidden;
     background: white;
     position: relative;
     box-sizing: border-box;*/
-    background:#f1f4f7;
-    border-radius: 10px;
-}
 
+    /* background:#f1f4f7;
+    border-radius: 10px; */
+
+    background: #21212e;
+    left:5%;
+    top:10%;
+    bottom: 10%;
+    right: 35%;
+    border-radius: 1.5rem;
+    -webkit-filter: drop-shadow(0px 0px 12px #c9c9c9);
+    filter: drop-shadow(0px 0px 12px #c9c9c9);
+    
+    width: 60%;
+    float:left;
+    position:fixed;
+
+}
+/* .leftdescription{
+  background: #f1f1f1;
+} */
 
 .container{ /*set invisible
     /*width: 200px;*/
@@ -105,6 +138,7 @@ img {
   padding: 15px;
   border-radius: 30px;
   color: #7e8a98;
+  /* color: #f1f1f1; */
   outline: none;
   cursor: pointer;
 }
