--- a/main/templates/demo3player.html
+++ b/main/templates/demo3player.html
@@ -33,7 +33,7 @@
               
           </div>
           <div class="col-md-8"  >
-            <div class="jumbotron" style="box-shadow: -5px -5px 15px 0px #ffffff9e, 5px 5px 15px 0px #a3b1c6a8;">
+            <div class="jumbotron">
             <!-- <div class="jumbotron" style="box-shadow: -5px -5px 15px 0px #ffffff9e, 5px 5px 15px 0px #f1f1f1;"></div> -->
               <h2 class="post-title" style="color:#f1f1f1 ;">
                {{ message["episode_name"] }}
