--- a/main/static/reset.css
+++ b/main/static/reset.css
@@ -1,83 +1,161 @@
-.main{
-    background: white;
-    position: absolute;
-    left:0%;
-    top:0%;
-    bottom: 0%;
-    right: 0%;
+/* Desktop-5 */
+
+body { 
+    font-family: sans-serif; 
+    padding: 1em; 
+    display: flex;
+    justify-content: center;
 }
-.left{
-    background: #313144;
-    left:5%;
-    top:10%;
-    bottom: 10%;
-    right: 35%;
-    border-radius: 1.5rem;
+
+li { list-style-type: none; }
+
+.ais-SearchBox { margin: 1em 0; }
+
+.main{
+    background: #f2f2f2;
+    display: flex;
+    justify-content: center;
+}
+
+.barBlock{
+    position: relative;
+    width: 1323px;
+    height: 814px;
+    top: 50px;
+    margin: 0 auto;
+
+    display: flex;
+    justify-content: center;
+
+    background: #293844;
+    border-radius: 30px;    
     -webkit-filter: drop-shadow(0px 0px 12px #c9c9c9);
     filter: drop-shadow(0px 0px 12px #c9c9c9);
-    
-    width: 60%;
-    float:left;
-    position:fixed;
 }
-#searchbox{
-    top:60%;
-    left:10%;
 
+.title {
     position: absolute;
+    height: 93px;
+    top: 25%;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 79px;
+    line-height: 93px;
+    color: #FFFFFF;
 }
-/*.ais-SearchBox-form{
-    top:300px;
+
+.searchbox{
     position: absolute;
-}*/
+    width: 70%;
+    top: 50%;
+    margin: 0 auto;
+}
+
+.ais-SearchBox-form{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+}
+
 .ais-SearchBox-input{
     position: absolute;
     height: 70px;
-    width: 60%;
+    margin: 0 auto;
     outline: none;
     border: none;
     border-radius: 10px;
     padding: 0 60px 0 20px;
-    font-size: 18px;
+    font-size: 30px;
 }
-.ais-SearchBox-reset{
-    position: absolute;
-    left:80%;
-    /*top:200px;*/
-}
-.hits{
-    float:left;
-    top:0%;
-    bottom:0%;
-    left: 70%;
-    right: 5%;
-    position:fixed;
-    overflow-x: scroll;
-}
-li { list-style-type: none; }
-.top{
-    width: 300px;
-    height: 440px;
-    margin-bottom: 2.5rem;
-    margin-top: 2.5rem;
 
-    float:left;
-    position: relative;
-    perspective: 1000px;
+.submitBtn {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    left: 97.5%;
+    background: #FFFFFF;
+    border: 1px solid #FFFFFF;
+    transform: none;
 }
-.row{
-    width: 300px;
-    height: 420px;
-    margin-bottom: 2.5rem;
-    margin-top: 2.5rem;
+
+.submitIcon {
+    position: absolute;
+    width: 75%;
+    height: 75%;
+    top: 55%;
+    background: #FFFFFF;
+}
+
+.ais-SearchBox-submit svg path{
+    fill: #000000 !important;
+}
+
+/* Desktop-6 */
+
+.movingTitle {
+    animation-name: moveTitle;
+    animation-duration: 0.7s;
+    animation-fill-mode: forwards;
+} @keyframes moveTitle {
+    100% {
+        transform: translate(-530px, -220px);
+        font-size: 40px;
+        line-height: 48px;
+    }
+}
+
+.movingSearchbox {
+    animation-name: moveSearchbox;
+    animation-duration: 0.7s;
+    animation-fill-mode: forwards;
+} @keyframes moveSearchbox {
+    100% {
+        transform: translate(0px, -340px);
+        width: 55%;
+    }
+}
+
+.ais-InfiniteHits {
+    position: absolute;
+    top: 20%;
+    width: 1100px;
+    height: 600px;
+    overflow: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.ais-InfiniteHits {
+    animation-name: moveInfiniteHits;
+    animation-duration: 0.7s;
+    animation-fill-mode: forwards;
+} @keyframes moveInfiniteHits {
+    0% {
+        transform: scaleY(0);
+    }
+    100% {
+        transform-origin: top;
+        transform: scale(1);
+    }
+}
+
+.singlehit {
+    width: 208px;
+    height: 252px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 9px;
+    margin-bottom: 49px;
     -webkit-filter: drop-shadow(0px 0px 12px #afafaf);
     filter: drop-shadow(0px 0px 12px #afafaf);
 
     float: left;
     position: relative;
-    perspective: 1000px;
 }
-.front,.back{
+
+.card {
     width: 100%;
     height: 100%;
     z-index: 1;
@@ -85,29 +163,50 @@ li { list-style-type: none; }
     border-radius: 1.2rem;
 
     backface-visibility: hidden; /*html 元素背後不可看見*/
-    transition: .8s;
+    background-color: #faf4f4;
 }
-.front{
-    transform: rotateY(0deg);
-    background-color: #161629;
-    z-index: 10;
-}
+
 img{
-    height:300px; 
-    width:300px;
-    border-radius: 1.2rem 1.2rem 0 0;
-    z-index: 5;
+    height: 161px; 
+    width: 148px;
+    /* border-radius: 1.2rem 1.2rem 0 0; */
 
     position: absolute;
-    left: 0%;
+    left: 14%;
 }
+
 .info{
     position: absolute;
-    top:320px;
-    bottom: 20px;
+    top: 146px;
     left: 5%;
     right: 5%;
 }
+
+.hit-episode{
+    font-family: 'Nunito Sans', sans-serif;
+    position: absolute;
+    font-size: 20px;
+    line-height: 25px;
+    color: #000000;
+
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    white-space: normal;
+}
+
+.hit-episode .ais-Highlight-highlighted {
+    font-size: 20px;
+    color:#000000;
+    /* background: linear-gradient(to bottom,transparent,transparent 50%,#B0120F 50%,#B0120F 80%,transparent 80%); */
+}
+
+/* Desktop 7 */
+
 .description{
     visibility: hidden;
     font-family: 'Nunito Sans', sans-serif;
@@ -126,6 +225,7 @@ img{
     -webkit-box-orient: vertical;
     white-space: normal;
 }
+
 .hit-publisher{
     font-family: 'Nunito Sans', sans-serif;
     position: absolute;
@@ -142,34 +242,13 @@ img{
     -webkit-box-orient: vertical;
     white-space: normal;
 }
-.hit-episode{
-    font-family: 'Nunito Sans', sans-serif;
-    position: absolute;
-    top:35%;
-    left:0%;
 
-    font-size: 18px;
-    line-height: 24px;
-    color:white;
-
-    overflow:hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
-    white-space: normal;
-}
 .hit-publisher .ais-Highlight-highlighted {
     font-size: 15px;
     color:white;
     background: linear-gradient(to bottom,transparent,transparent 50%,#B0120F 50%,#B0120F 85%,transparent 85%);
 }
-.hit-episode .ais-Highlight-highlighted {
-    font-size: 18px;
-    color:white;
-    background: linear-gradient(to bottom,transparent,transparent 50%,#B0120F 50%,#B0120F 80%,transparent 80%);
-}
+
 .back{  
     background-color: #26262e;
     transform: rotateY(-180deg);
@@ -189,7 +268,7 @@ img{
     animation-delay: 0.8s;
     animation-fill-mode: forwards;
 }
-@keyframes img_shink {
+/* @keyframes img_shink {
     100% { 
         height:100px; 
         width:100px;
@@ -213,7 +292,8 @@ img{
         top:220px;
         bottom: 20px;
     }
-}
+} */
+
 .ais-InfiniteHits-loadMore{
     display:none;
 }
